environments/prod/kubernetes/services/pms/PMS-INGRESS-GLOBAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-ingress-global
  namespace: pms
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=PROD,Name=PMS-Ingress-Gloabal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2,subnet-3
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-prod-kube-ingress-controller-logs,access_logs.s3.prefix=pms,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
    - host: pms-guest-web-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: guest-web-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-guest-web-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: guest-web-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-email-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: email-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-folio-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: folio-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-inncenter-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: inncenter-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-inncenter-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: inncenter-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-quickbooks-desktop-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: quickbooks-desktop-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-quickbooks-desktop-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: quickbooks-desktop-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-messaging-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: messaging-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-reservations-dashboard-ui.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: reservations-dashboard-ui
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-multi-languages-support-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: multi-languages-support-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-extensions-remotelock-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: extensions-remotelock-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-extensions-templates-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: extensions-templates-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
    - host: pms-extensions-email-rules-api.steblynskyi.com
      http:
        paths:
          - backend:
              service:
                name: extensions-email-rules-api
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
